[tool.poetry]
name = "alpaca-api-strategies"
version = "0.1.0"
description = ""
authors = ["TexasCoding <jeff10278@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
yfinance = "^0.2.38"
ta = "^0.11.0"
requests-cache = "^1.2.0"
requests-ratelimiter = "^0.6.0"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.1"
openai = "^1.25.1"
slack-sdk = "^3.27.1"
poetry-plugin-export = "^1.7.1"
py-alpaca-api = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
