[tool.poetry]
name = "alpaca-api-strategies"
version = "0.1.5"
description = ""
authors = ["TexasCoding <jeff10278@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
python-dotenv = "^1.0.1"
poetry-plugin-export = "^1.7.1"
py-alpaca-daily-losers = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
